[package]
name = "getprose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["unstable-locales"] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
format_num = "0.1.0"
gettext = "0.4.0"
num-format = "0.4.0"
once_cell = "1.9.0"
strum = { version = "0.23.0", features = ["derive"] }
thiserror = "1.0.30"
