[package]
name = "getprose"
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"
authors = ["49nord GmbH <hello@49nord.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", optional = true, features = [
    "unstable-locales",
] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
format_num = "0.1.0"
gettext = "0.4.0"
num-format = "0.4.4"
once_cell = "1.19.0"
thiserror = "1.0.57"
typed-builder = { version = "0.18.1", optional = true }
walkdir = { version = "2.4.0", optional = true }

[features]
build = ["typed-builder", "walkdir"]
